fix overflow scrollbar issue

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -116,6 +116,12 @@ body {
 
 /* CONTACT STYLING */
 /* GLOW GRID */
+#grid-container {
+	width:100%;
+	height:100vh;
+	overflow: hidden;
+	position: absolute;
+}
 #grid{
 	position:absolute;		/* req'd for horiz center */
 	right:50%;				/* req'd for horiz center */
